changed to pink theme, need to sort the white banner at the bottom

--- a/GamingBacklogWebApp/Pages/EditGame.cshtml
+++ b/GamingBacklogWebApp/Pages/EditGame.cshtml
@@ -9,7 +9,9 @@
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1>Edit Game</h1>
+                <h1 style="font-family: 'Comfortaa', cursive; color: #6B46C1; text-shadow: 2px 2px 4px rgba(248, 187, 217, 0.3);">
+                    <i class="fas fa-edit" style="color: #F8BBD9;"></i> Edit Game
+                </h1>
                 <a asp-page="./Games" class="btn btn-outline-secondary">
                     <i class="fas fa-arrow-left"></i> Back to Games
                 </a>
