--- a/GamingBacklogWebApp/Pages/Shared/_Layout.cshtml.css
+++ b/GamingBacklogWebApp/Pages/Shared/_Layout.cshtml.css
@@ -1,6 +1,13 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+/* Ensure proper flexbox layout for footer positioning */
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -37,12 +44,4 @@ a {
 button.accept-policy {
   font-size: 1rem;
   line-height: inherit;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
 }
